--- a/backend/package.json
+++ b/backend/package.json
@@ -12,8 +12,9 @@
     "studio": "npx prisma studio"
   },
   "dependencies": {
-    "@prisma/client": "^5.0.0",
+    "@prisma/client": "^5.22.0",
     "bcrypt": "^5.1.0",
+    "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.0",
@@ -26,7 +27,7 @@
     "@types/express": "^4.17.17",
     "@types/jsonwebtoken": "^9.0.2",
     "cors": "^2.8.5",
-    "prisma": "^5.0.0",
+    "prisma": "^6.19.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.2.0"
   }
