--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -3,11 +3,14 @@
     "target": "ES2022",
     "module": "commonjs",
     "outDir": "dist",
-    "rootDir": "src",
     "strict": true,
     "esModuleInterop": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
     "resolveJsonModule": true
-  }
+  },
+  "include": [
+    "src/**/*",
+    "prisma.config.ts"
+  ]
 }
